--- a/project/src/Login.css
+++ b/project/src/Login.css
@@ -1,6 +1,9 @@
 .auth-center {
 display: flex;
 flex-direction: column;
+background-image: "../public/LoginPic.jpeg";
+background-size: cover;
+height: 100%;
 }
 
 .mainBtn {
